--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,44 +1,44 @@
 @font-face {
     font-family: 'robotoblack';
-    src: url('/METRA2/assets/font/roboto/roboto-black-webfont.eot');
-    src: url('/METRA2/assets/font/roboto/roboto-black-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/METRA2/assets/font/roboto/roboto-black-webfont.woff2') format('woff2'),
-         url('/METRA2/assets/font/roboto/roboto-black-webfont.woff') format('woff'),
-         url('/METRA2/assets/font/roboto/roboto-black-webfont.ttf') format('truetype'),
-         url('/METRA2/assets/font/roboto/roboto-black-webfont.svg#robotoblack') format('svg');
+    src: url('/ACG/assets/font/roboto/roboto-black-webfont.eot');
+    src: url('/ACG/assets/font/roboto/roboto-black-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/ACG/assets/font/roboto/roboto-black-webfont.woff2') format('woff2'),
+         url('/ACG/assets/font/roboto/roboto-black-webfont.woff') format('woff'),
+         url('/ACG/assets/font/roboto/roboto-black-webfont.ttf') format('truetype'),
+         url('/ACG/assets/font/roboto/roboto-black-webfont.svg#robotoblack') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'robotobold';
-    src: url('/METRA2/assets/font/roboto/roboto-bold-webfont.eot');
-    src: url('/METRA2/assets/font/roboto/roboto-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/METRA2/assets/font/roboto/roboto-bold-webfont.woff2') format('woff2'),
-         url('/METRA2/assets/font/roboto/roboto-bold-webfont.woff') format('woff'),
-         url('/METRA2/assets/font/roboto/roboto-bold-webfont.ttf') format('truetype'),
-         url('/METRA2/assets/font/roboto/roboto-bold-webfont.svg#robotobold') format('svg');
+    src: url('/ACG/assets/font/roboto/roboto-bold-webfont.eot');
+    src: url('/ACG/assets/font/roboto/roboto-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/ACG/assets/font/roboto/roboto-bold-webfont.woff2') format('woff2'),
+         url('/ACG/assets/font/roboto/roboto-bold-webfont.woff') format('woff'),
+         url('/ACG/assets/font/roboto/roboto-bold-webfont.ttf') format('truetype'),
+         url('/ACG/assets/font/roboto/roboto-bold-webfont.svg#robotobold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'robotomedium';
-    src: url('/METRA2/assets/font/roboto/roboto-medium-webfont.eot');
-    src: url('/METRA2/assets/font/roboto/roboto-medium-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/METRA2/assets/font/roboto/roboto-medium-webfont.woff2') format('woff2'),
-         url('/METRA2/assets/font/roboto/roboto-medium-webfont.woff') format('woff'),
-         url('/METRA2/assets/font/roboto/roboto-medium-webfont.ttf') format('truetype'),
-         url('/METRA2/assets/font/roboto/roboto-medium-webfont.svg#robotomedium') format('svg');
+    src: url('/ACG/assets/font/roboto/roboto-medium-webfont.eot');
+    src: url('/ACG/assets/font/roboto/roboto-medium-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/ACG/assets/font/roboto/roboto-medium-webfont.woff2') format('woff2'),
+         url('/ACG/assets/font/roboto/roboto-medium-webfont.woff') format('woff'),
+         url('/ACG/assets/font/roboto/roboto-medium-webfont.ttf') format('truetype'),
+         url('/ACG/assets/font/roboto/roboto-medium-webfont.svg#robotomedium') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'robotoregular';
-    src: url('/METRA2/assets/font/roboto/roboto-regular-webfont.eot');
-    src: url('/METRA2/assets/font/roboto/roboto-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/METRA2/assets/font/roboto/roboto-regular-webfont.woff2') format('woff2'),
-         url('/METRA2/assets/font/roboto/roboto-regular-webfont.woff') format('woff'),
-         url('/METRA2/assets/font/roboto/roboto-regular-webfont.ttf') format('truetype'),
-         url('/METRA2/assets/font/roboto/roboto-regular-webfont.svg#robotoregular') format('svg');
+    src: url('/ACG/assets/font/roboto/roboto-regular-webfont.eot');
+    src: url('/ACG/assets/font/roboto/roboto-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/ACG/assets/font/roboto/roboto-regular-webfont.woff2') format('woff2'),
+         url('/ACG/assets/font/roboto/roboto-regular-webfont.woff') format('woff'),
+         url('/ACG/assets/font/roboto/roboto-regular-webfont.ttf') format('truetype'),
+         url('/ACG/assets/font/roboto/roboto-regular-webfont.svg#robotoregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -46,7 +46,7 @@ body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
-    /*background: url('/METRA2/assets/images/back.jpg');*/
+    /*background: url('/ACG/assets/images/back.jpg');*/
 }
 main {
     flex: 1 0 auto;
