--- a/assets/css/index_home.css
+++ b/assets/css/index_home.css
@@ -1,10 +1,10 @@
 @font-face{
-    font-family:"Eurostib";
+    font-family: "Open Sans";
     src: url(http://165.98.75.42/COREGUMA/assets/font/eurostile/Eurostib.ttf);
     /*src: url(http://localhost:8448/GUMA_DASHBOARD/assets/font/eurostile/Eurostib.ttf);*/
 }
 html {
-    font-family: Eurostib;
+   font-family: "Open Sans";
 }
  body {
     display: flex;
@@ -83,3 +83,5 @@ ul >  li > img{
 vertical-align: middle;
   
 }
+
+
